fix overflow

--- a/frontend/src/styles/component/CarouselInstroduce.scss
+++ b/frontend/src/styles/component/CarouselInstroduce.scss
@@ -10,6 +10,9 @@
         }
     }
 }
+.slide-box {
+    overflow: hidden !important;
+}
 .slide-root {
     position: relative;
     .text-introduce-1 {
